--- a/service.css
+++ b/service.css
@@ -36,9 +36,9 @@ body {
 
 /* Page Header */
 .page-header {
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('images/services-header.jpg') no-repeat center center/cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('https://res.cloudinary.com/dsedezvzs/image/upload/v1730966120/hero_tbnxvx.jpg') no-repeat center center/cover;
     color: #FFD9C0;
-    height: 60vh;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
