--- a/style.css
+++ b/style.css
@@ -286,3 +286,19 @@ body {
         height: 80vh;
     }
 }
+
+
+.cookie-consent-banner {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.85);
+    color: #fff;
+    padding: 15px;
+    text-align: center;
+    z-index: 9999;
+}
+.cookie-consent-banner button {
+    margin-left: 15px;
+}
