--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@ body {
     line-height: 1.6;
 }
 
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+outline: none;
+box-shadow: none;
+}
+
 .container {
     width: 90%;
     max-width: 1200px;
