--- a/service.css
+++ b/service.css
@@ -31,6 +31,15 @@ h3, h4, h5, h6, a {
     font-family: 'GT Super Display Regular', sans-serif !important;
 }
 
+
+.heading-nav {color:black;
+    color: black !important;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1rem;
+    
+}
+
 .container {
     width: 90%;
     max-width: 1200px;
