--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ outline: none;
 box-shadow: none;
 }
 
+
+
 .container {
     width: 90%;
     max-width: 1200px;
@@ -29,6 +31,79 @@ box-shadow: none;
     font-family: 'CenzoFlare-Black';
     src: url('CenzoFlare-Black.ttf') format('truetype');
 }
+
+.heading-nav {
+    color: black !important;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1rem; /* Default font size */
+}
+
+/* Medium screens (tablets, 768px and up) */
+@media (max-width: 768px) {
+    .heading-nav {
+        font-size: 0.9rem;
+    }
+}
+
+/* Small screens (mobile devices, 576px and up) */
+@media (max-width: 576px) {
+    .heading-nav {
+        font-size: 16px;
+    }
+}
+
+/* Extra small screens (smaller than 576px) */
+@media (max-width: 400px) {
+    .heading-nav {
+        font-size: 16px;
+    }
+}
+
+/* Default Logo and Navbar Button Styles */
+.navbar-brand img {
+    height: 40px; /* Default size */
+    border: 1px solid black;
+}
+
+.navbar-toggler {
+    font-size: 1.25rem; /* Default button font size */
+}
+
+/* Medium screens (tablets, 768px and up) */
+@media (max-width: 768px) {
+    .navbar-brand img {
+        height: 35px; /* Slightly smaller logo on tablets */
+    }
+
+    .navbar-toggler {
+        font-size: 1.1rem; /* Adjust button font size for tablets */
+    }
+}
+
+/* Small screens (mobile devices, 576px and up) */
+@media (max-width: 576px) {
+    .navbar-brand img {
+        height: 30px; /* Smaller logo for mobile screens */
+    }
+
+    .navbar-toggler {
+        font-size: 1rem; /* Smaller button font size for mobile */
+    }
+}
+
+/* Extra small screens (smaller than 400px) */
+@media (max-width: 400px) {
+    .navbar-brand img {
+        height: 25px; /* Further reduced logo size for very small screens */
+    }
+
+    .navbar-toggler {
+        font-size: 0.9rem; /* Smallest button font size for very small screens */
+    }
+}
+
+
 
 /* Apply the fonts to specific elements */
 h1, h2 {
@@ -323,4 +398,38 @@ h3, h4, h5, h6, a {
 }
 .cookie-consent-banner button {
     margin-left: 15px;
+}
+
+
+/* Modal Styles */
+.modal-content {
+    background-color: #E8E9EB; /* Anti-flash white */
+    border-radius: 10px;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+}
+
+.modal-header {
+    background-color: #9bc969; /* Bright Light Green */
+    color: #313638; /* Onyx */
+    font-family: 'CenzoFlare-Black', sans-serif;
+    border-bottom: 1px solid #E0DFD5; /* Alabaster */
+}
+
+.modal-title {
+    font-size: 1.5rem;
+}
+
+.modal-body {
+    color: #313638; /* Onyx */
+    font-family: 'GT Super Display Regular', sans-serif;
+    line-height: 1.6;
+}
+
+.btn-close {
+    color: #313638;
+    opacity: 0.8;
+}
+
+.btn-close:hover {
+    opacity: 1;
 }
